<resources>
    <string name="app_name">HiParking</string>
    <string name="title_activity_maps">Map</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="name">name</string>
    <string name="id">id</string>
    <string name="phone_number">phone number</string>
    <string name="licence">Licence</string>
    <string name="create">create</string>
    <string name="cancel">cancel</string>
    <string name="phone_login">phone login</string>
    <string name="or">OR</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">login</string>
    <string name="driver">Driver</string>
    <string name="mechanic">Mechanic</string>
    <string name="garage_manager">Garage manager</string>
    <string name="create_new_account_register">Create new account? Register</string>
    <string name="forget_password">Forget password?</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="do_you_have_account_login">Do you have account? Login</string>
    <string name="garage_name">Garage Name</string>
    <string name="empty_space">empty Space</string>
    <string name="no_space">No space</string>
    <string name="price">price</string>
    <string name="_5">5</string>
    <string name="rate">Rate</string>
    <string name="_0">0</string>
    <string name="book">book</string>
    <string name="permanent">permanent</string>
    <string name="non_permanent">Non permanent</string>
    <string name="date">Date</string>
    <string name="time">time</string>
    <string name="city">city</string>
    <string name="number_of_garage_unit">number of garage unit</string>
    <string name="unit_price_per_hour">unit price per hour</string>
    <string name="location">Location</string>
    <string name="licence_paper">Licence paper</string>
    <string name="add">add</string>
    <string name="garage_manager_name">Garage manager name</string>
    <string name="national_id">National id</string>
    <string name="phone">Phone</string>
    <string name="mechanical_name">mechanical name</string>
    <string name="send">Send</string>
    <string name="ambulance_123">Ambulance: 123</string>
    <string name="tourism_police_126">Tourism Police: 126</string>
    <string name="traffic_police_128">Traffic Police: 128</string>
    <string name="police_emergency_122">Police Emergency: 122</string>
    <string name="fire_department_180">Fire Department: 180</string>
    <string name="electricity_emergency_121">Electricity Emergency: 121</string>
    <string name="gas_emergency_129">Gas Emergency: 129</string>
    <string name="user_name">User name</string>
    <string name="id_235635638537843">ID: 235635638537843</string>
    <string name="email_mousdddddtafa03_gmail_com">Email: mousdddddtafa03@gmail.com</string>
    <string name="phone_201159088197">Phone: +201159088197</string>
    <string name="location_egypt_alx">location: Egypt, Alx</string>
    <string name="paper">download paper</string>
    <string name="join_in_25_nov_2022">Join in: 25/nov/2022</string>
    <string name="call">Call</string>
    <string name="chat">Chat</string>
    <string name="id_255886386346473">ID: 255886386346473</string>
    <string name="car_id_131_abds">Car ID: 131|ABDS</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="app">App</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="language">language</string>
    <string name="garage_1">garage 1</string>
    <string name="cairo">cairo</string>
    <string name="garage_unit">garage unit</string>
    <string name="_50">50</string>
    <string name="hour_price">hour price</string>
    <string name="booking_analysis">booking analysis</string>
    <string name="__0">0 %</string>
    <string name="customer_name">customer name</string>
    <string name="description">description</string>
    <string name="normal_map">normal map</string>
    <string name="hybrid_map">hybrid map</string>
    <string name="satellite_map">satellite map</string>
    <string name="terrain_map">terrain map</string>
    <string name="please_enter_email">please enter you\'r email</string>
    <string name="successful_add">"Successfully added "</string>
    <string name="change_language">change language</string>
    <string name="show_location">Show location</string>
    <string name="three_digits">You must enter 3-digit characters</string>
    <string name="expired">Your card has expired. Please enter the usage date correctly.</string>
    <string name="two_digits">You must enter 2-digit characters and you\'ll enter to number the most digit-value is \'12\'</string>
    <string name="enter_to_name">Enter to name on Your Card.</string>
    <string name="sixthty_digits">Enter your 16-digit card number.</string>
    <string name="must">You must enter 2-digit characters and you\'ll enter to number the most digit-value is \'99\'</string>
    <string name="parking">Parking</string>
    <string name="profile">Profile</string>
    <string name="mechanical">Mechanical</string>
    <string name="emergency">Emergency</string>
    <string name="contact_us">Contact us</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="drivers">Drivers</string>
    <string name="home">home</string>
    <string name="enter_data">Please Enter your data correctly</string>
    <string name="no_user">No such a User</string>
    <string name="old_booking">you have old booking</string>
    <string name="enter_your_name">please enter your name</string>
    <string name="choose_time">please choose time</string>
    <string name="choose_date">please choose date</string>
    <string name="enter_duration">please enter duration</string>
    <string name="booking">successful booking</string>
    <string name="error">error occur</string>
    <string name="unable_location">Unable to get location</string>
    <string name="destination">Destination</string>
    <string name="update_profile">Profile Updated</string>
    <string name="fill_all">fill all fields</string>
    <string name="create_profile">Profile created</string>
    <string name="compilation">Complaint has been sent successfully</string>
    <string name="arabic">Arabic</string>
    <string name="english">english</string>
    <string name="garage">garage</string>
    <string name="select_location">select location</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="loading">loading data</string>
    <string name="garage_name_enter">please enter the garage name</string>
    <string name="enter_city">please enter the city</string>
    <string name="units_garage">please enter the number of the units in the garage</string>
    <string name="unit_per_hour">please enter the unit price per hour </string>
    <string name="select_garage_location">please select the garage location</string>
    <string name="add_garage_paper">please add the garage papers</string>
    <string name="update_date">date updated successfully</string>
    <string name="enter_name">please enter your name</string>
    <string name="correct_phone">please enter your correct phone</string>
    <string name="enter_national">please enter your national id</string>
    <string name="garage_manager_date">update garage manager data</string>
    <string name="add_garage_manager">add garage manager data successful</string>
    <string name="error_loading_data">error occur in loading data </string>
    <string name="error_occer_image">error occur in loading image </string>
    <string name="file_pdf">Notification : file should be pdf </string>
    <string name="upload_file">file uploaded successfully </string>
    <string name="faild_upload">Failed to upload file</string>
    <string name="profile_created">Profile created</string>
    <string name="more_character">Your password should be more than 8 character</string>
    <string name="valid_email">Email must valid Contain @ like ola@gmail.com</string>
    <string name="correct_data">Please Enter Your Data Correctly</string>
    <string name="correct_pass">Your password should be more than 8 character</string>
    <string name="contain_small">Your password should contain small , large character and number</string>
    <string name="not_match">not match the password </string>
    <string name="registeration">registration successful</string>

    <string name="complaint">please enter your complaint</string>
    <string name="qr_scanner">Qr scanner</string>
    <string name="arrival">arrival time %s</string>

    <string name="duration">Duration</string>
    <string name="skap">skap</string>


</resources>