<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/m_navigation_customer"
        android:title="@string/drivers"
        android:orderInCategory="100"
        android:icon="@drawable/ic_mechanical">
    </item>
    <item
        android:id="@+id/m_navigation_profile"
        android:title="@string/profile"
        android:orderInCategory="100"
        android:icon="@drawable/ic_person">
    </item>
    <item
        android:title="@string/emergency"
        android:orderInCategory="100"
        android:icon="@drawable/ic_emergency"
        android:id="@+id/m_navigation_emergency">
    </item>
    <item
        android:title="@string/contact_us"
        android:orderInCategory="100"
        android:icon="@drawable/ic_phone"
        android:id="@+id/m_navigation_contact">
    </item>
    <item
        android:title="@string/setting"
        android:orderInCategory="100"
        android:icon="@drawable/ic_settings"
        android:id="@+id/m_navigation_setting"
        >
    </item>
    <item
        android:title="@string/logout"
        android:id="@+id/m_navigation_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_baseline_logout_24">
    </item>

</menu>