<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".driver.payment_package.payment_faragment"
    tools:ignore="MissingClass">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.fevziomurtekin.payview.Payview
        android:id="@+id/payview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardAnimationType="vertical"
        app:cardBgColor="?attr/background_green"
        app:cardCvErrorText="@string/three_digits"
        app:cardCvTextSize="14"
        app:cardExpiredErrorText="@string/expired"
        app:cardFgColor="@color/ic_launcher_background"
        app:cardMonthErrorText="@string/two_digits"
        app:cardMonthTextSize="13"
        app:cardNameHelperText="@string/enter_to_name"
        app:cardNameTextSize="15"
        app:cardNoTextSize="14"
        app:cardNumberHelperText="@string/sixthty_digits"
        app:cardTextColor="?attr/background_green"
        app:cardYearErrorText="@string/must"
        app:cardYearTextSize="13" />
</RelativeLayout>

</FrameLayout>