<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".garage_manager.AddGarageManData">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background_color"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/manager_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_person"
                    app:civ_border_color="@color/grean"
                    app:civ_border_width="2dp"
                    android:layout_margin="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <TextView
                    android:id="@+id/add_manager_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/garage_manager_name"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/manager_image" />

                <EditText
                    android:id="@+id/add_garage_manager_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/edittext_shape"
                    android:padding="8dp"
                    android:textColor="?attr/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_manager_title"
                    tools:ignore="SpeakableTextPresentCheck" />


                <TextView
                    android:id="@+id/national_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/national_id"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_garage_manager_username" />

                <EditText
                    android:id="@+id/add_manager_national_id"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/edittext_shape"
                    android:padding="8dp"
                    android:inputType="number"
                    android:textColor="?attr/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/national_id"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/phone_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/phone"
                    android:textColor="?attr/text_color"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_manager_national_id" />

                <EditText
                    android:id="@+id/add_manager_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/edittext_shape"
                    android:inputType="phone"
                    android:padding="8dp"
                    android:textColor="?attr/text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phone_add"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_garage_manager_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_shape"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintTop_toBottomOf="@+id/add_manager_phone" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>